# image-to-midi

./: .gitignore  README.md  pyproject.toml
image_to_midi/: __init__.py  app.py  app_state.py  cache.py  file_manager.py  gradio_app.py  image_processing.py  midi_utils.py  models.py  music_transformations.py  note_detection.py  pipeline.py  staff.py  ui_updates.py  visualization.py
image_to_midi/models/: __init__.py  core_models.py  pipeline_models.py  settings_models.py  visualization_models.py
src/: app.py  midi_utils.py  staff.py
tests/: conftest.py  test_image_processing.py  test_midi_utils.py  test_music_transformations.py  test_note_detection.py  test_pipeline.py  test_staff.py  test_ui_updates.py  test_visualization.py
tests/models/: conftest.py  test_core_models.py  test_pipeline_models.py  test_settings_models.py  test_visualization_models.py
