[tool.poetry]
name = "image-to-midi"
version = "0.1.0"
description = ""
authors = ["tshippen <TShippen@barnard.edu>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.0"
pytest = "^8.3.5"
opencv-python = "^4.11.0.86"
numpy = ">=1.20.0,<2.0.0"
mido = "^1.3.3"
black = "^25.1.0"
pydantic = "^2.11.4"
gradio = "^5.29.0"
music21 = "^9.5.0"
pretty-midi = "^0.2.10"
soundfile = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
